maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:41: error: not found: value estSurBscuit
	while  (!estSurBscuit())
                 ^